--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#vehicles">Our Vehicles</a></li>
           <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
         </ul>
@@ -145,6 +146,89 @@
             <a href="https://wa.me/919871913870?text=Hello, I am interested in booking a bus/car taxi for a Day Trip from Tours and Travels." target="_blank" class="btn btn-outline-primary btn-sm mt-2">Book on WhatsApp</a>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Our Traveller Vehicles Section -->
+  <section id="vehicles" class="py-5 bg-light reveal">
+    <div class="container">
+      <div class="text-center mb-5">
+        <h2 class="section-title mb-3">Our Traveller Vehicles</h2>
+        <p class="lead">Take a look at our comfortable and well-maintained Traveller vehicles ready for your next journey.</p>
+      </div>
+      
+      <!-- Desktop Grid Layout -->
+      <div class="row g-4 d-none d-lg-flex">
+        <div class="col-md-4">
+          <div class="vehicle-item rounded-4 overflow-hidden shadow-sm">
+            <img src="WhatsApp Image 2025-07-11 at 17.22.04_97379c4c.jpg" alt="Traveller Vehicle - Image 1" class="img-fluid vehicle-img">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="vehicle-item rounded-4 overflow-hidden shadow-sm">
+            <img src="WhatsApp Image 2025-07-11 at 17.22.05_624c1120.jpg" alt="Traveller Vehicle - Image 2" class="img-fluid vehicle-img">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="vehicle-item rounded-4 overflow-hidden shadow-sm">
+            <img src="WhatsApp Image 2025-07-11 at 17.22.07_41bcbbf0.jpg" alt="Traveller Vehicle - Image 3" class="img-fluid vehicle-img">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="vehicle-item rounded-4 overflow-hidden shadow-sm">
+            <img src="WhatsApp Image 2025-07-11 at 17.22.08_4954c9e2.jpg" alt="Traveller Vehicle - Image 4" class="img-fluid vehicle-img">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="vehicle-item rounded-4 overflow-hidden shadow-sm">
+            <img src="WhatsApp Image 2025-07-11 at 17.22.09_fb1892d7.jpg" alt="Traveller Vehicle - Image 5" class="img-fluid vehicle-img">
+          </div>
+        </div>
+      </div>
+
+      <!-- Mobile Horizontal Slider -->
+      <div class="d-lg-none">
+        <div class="vehicle-slider">
+          <div class="vehicle-slide">
+            <div class="vehicle-item rounded-4 overflow-hidden shadow-sm">
+              <img src="WhatsApp Image 2025-07-11 at 17.22.04_97379c4c.jpg" alt="Traveller Vehicle - Image 1" class="img-fluid vehicle-img">
+            </div>
+          </div>
+          <div class="vehicle-slide">
+            <div class="vehicle-item rounded-4 overflow-hidden shadow-sm">
+              <img src="WhatsApp Image 2025-07-11 at 17.22.05_624c1120.jpg" alt="Traveller Vehicle - Image 2" class="img-fluid vehicle-img">
+            </div>
+          </div>
+          <div class="vehicle-slide">
+            <div class="vehicle-item rounded-4 overflow-hidden shadow-sm">
+              <img src="WhatsApp Image 2025-07-11 at 17.22.07_41bcbbf0.jpg" alt="Traveller Vehicle - Image 3" class="img-fluid vehicle-img">
+            </div>
+          </div>
+          <div class="vehicle-slide">
+            <div class="vehicle-item rounded-4 overflow-hidden shadow-sm">
+              <img src="WhatsApp Image 2025-07-11 at 17.22.08_4954c9e2.jpg" alt="Traveller Vehicle - Image 4" class="img-fluid vehicle-img">
+            </div>
+          </div>
+          <div class="vehicle-slide">
+            <div class="vehicle-item rounded-4 overflow-hidden shadow-sm">
+              <img src="WhatsApp Image 2025-07-11 at 17.22.09_fb1892d7.jpg" alt="Traveller Vehicle - Image 5" class="img-fluid vehicle-img">
+            </div>
+          </div>
+        </div>
+        <div class="text-center mt-3">
+          <div class="vehicle-dots">
+            <span class="vehicle-dot active" data-slide="0"></span>
+            <span class="vehicle-dot" data-slide="1"></span>
+            <span class="vehicle-dot" data-slide="2"></span>
+            <span class="vehicle-dot" data-slide="3"></span>
+            <span class="vehicle-dot" data-slide="4"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="text-center mt-5">
+        <a href="https://wa.me/919871913870?text=Hello, I am interested in booking a Traveller vehicle from Tours and Travels. Please contact me for further details." target="_blank" class="btn btn-whatsapp btn-lg">Book This Traveller on WhatsApp</a>
       </div>
     </div>
   </section>
@@ -284,6 +368,7 @@
             <li><a href="#home" class="footer-link">Home</a></li>
             <li><a href="#about" class="footer-link">About Us</a></li>
             <li><a href="#services" class="footer-link">Services</a></li>
+            <li><a href="#vehicles" class="footer-link">Our Vehicles</a></li>
             <li><a href="#gallery" class="footer-link">Gallery</a></li>
             <li><a href="#contact" class="footer-link">Contact Us</a></li>
           </ul>
